tests/should_fail/sf011_reserved_as_var.hs
-- Should fail: reserved keyword used as variable name
module Sf011ReservedAsVar where

where :: Int -> Int
where x = x
